# simworker_service

./: .gitignore  AGENTS.md  README.md  error  isaacsim_service_v0.md  pyproject.toml  simworker_service.md
api/: __init__.py  main.py  mjpeg_stream.py
simworker/: __init__.py  camera_streams.py  entrypoint.py  frontend-backend-request-flow.md  handlers.py  isaacsim_worker_detailed_design.md  protocol.py  runtime.py  sim_manager.py  sim_manager_introduction.md
simworker/base_environments/: __init__.py  default.py
simworker/robots/: __init__.py  api_reference.txt  franka_api.py
simworker/scripts/: launch_task_gui.sh
simworker/scripts/test/: launch_default_base_env_gui.sh
simworker/table_environments/: __init__.py  common.py  default.py  multi_geometry.py  ycb.py
simworker/test_gui/: README.md  code.py  code_with.py  objects.json  run_task_gui.py
simworker/tests/: README.md  conftest.py  default_table_env_objects_info.json  test_franka_api.py  test_sim_manager_integration.py  test_simworker_integration.py
tests/: README.md  conftest.py  test_api_app.py  test_simworker_integration.py
