[project]
name = "isaacsim-service"
version = "0.1.0"
description = "Thin FastAPI layer for simworker."
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
