[project]
name = "isaacsim-service"
version = "0.1.0"
description = "Thin FastAPI layer for simworker."
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pillow>=11.1,<12.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "numpy>=2.2,<3.0",
    "pillow>=11.1,<12.0",
    "pytest>=8.3,<9.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
